alignment and fonts sizes fixed

--- a/src/app/dashboard/dashboard.component.css
+++ b/src/app/dashboard/dashboard.component.css
@@ -4,6 +4,7 @@
 }
 
 .page-wrapper {
+  margin: 50px auto 0 auto;
   background-color: #414755;
 }
 
