--- a/src/app/wallet/wallet-stats/wallet-stats.component.scss
+++ b/src/app/wallet/wallet-stats/wallet-stats.component.scss
@@ -7,7 +7,6 @@
 }
 
 .c-cost {
-  margin-top: 1px;
   padding: 20px 20px;
   border: 1px solid #CFA256 !important;
   border-radius: 5px;
